tests/snapshots/scenarios__025_cache_seeds_saliency.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "025_cache_seeds_saliency",
  "category": "cache_build",
  "status": "validated",
  "files": []
}
