tests/snapshots/scenarios__026_graph_nav_neighbors_related_metadata_and_toc.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "026_graph_nav_neighbors_related_metadata_and_toc",
  "category": "graph_navigation",
  "status": "validated",
  "files": []
}
