tests/snapshots/scenarios__027_graph_nav_related_from_seeds_with_diagnostics.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "027_graph_nav_related_from_seeds_with_diagnostics",
  "category": "graph_navigation",
  "status": "validated",
  "files": []
}
