tests/snapshots/scenarios__028_graph_nav_related_with_diagnostics.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "028_graph_nav_related_with_diagnostics",
  "category": "graph_navigation",
  "status": "validated",
  "files": []
}
