tests/snapshots/scenarios__029_hybrid_quantum_anchor_batch.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "029_hybrid_quantum_anchor_batch",
  "category": "hybrid",
  "status": "validated",
  "files": []
}
