tests/snapshots/scenarios__030_hybrid_quantum_fusion.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "030_hybrid_quantum_fusion",
  "category": "hybrid",
  "status": "validated",
  "files": []
}
