tests/snapshots/scenarios__031_md_attach_attachment_search_filters.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "031_md_attach_attachment_search_filters",
  "category": "markdown_attachments",
  "status": "validated",
  "files": []
}
