tests/snapshots/scenarios__032_md_attach_complex_markdown_links.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 032_md_attach_complex_markdown_links [markdown_attachments]: complex markdown links"
expression: result
info:
  id: 032_md_attach_complex_markdown_links
  name: complex markdown links
  category: markdown_attachments
  description: markdown_attachments scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/032_md_attach_complex_markdown_links/scenario.toml
---
{
  "category": "markdown_attachments",
  "files": [],
  "scenario_id": "032_md_attach_complex_markdown_links",
  "status": "validated"
}
